--- a/pom.xml
+++ b/pom.xml
@@ -357,37 +357,37 @@
             <dependency>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>org.apache.felix.framework</artifactId>
-                <version>1.0.3</version>
+                <version>${felix.framework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>org.apache.felix.main</artifactId>
-                <version>1.0.3</version>
+                <version>${felix.framework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>org.osgi.compendium</artifactId>
-                <version>1.0.0</version>
+                <version>${osgi.compendium.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.equinox</groupId>
                 <artifactId>org.eclipse.equinox.http.servlet</artifactId>
-                <version>2.2.2</version>
+                <version>${equinox.http.servlet.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.equinox</groupId>
                 <artifactId>org.eclipse.equinox.http.helper</artifactId>
-                <version>1.0.0</version>
+                <version>${equinox.http.helper.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.equinox</groupId>
                 <artifactId>org.eclipse.equinox.jsp.jasper</artifactId>
-                <version>1.0.1.R33x_v20070816</version>
+                <version>${equinox.jsp.jasper.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.equinox</groupId>
                 <artifactId>javax.servlet.jsp</artifactId>
-                <version>2.0.0.v200706191603</version>
+                <version>${javax.servlet.jsp.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.derby.wso2</groupId>
@@ -660,7 +660,7 @@
             <dependency>
                 <groupId>org.apache.rampart</groupId>
                 <artifactId>rampart-trust</artifactId>
-                <version>1.6.1-wso2v14</version>
+                <version>${rampart.wso2.version.1}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents.wso2</groupId>
@@ -723,7 +723,6 @@
                 <artifactId>org.wso2.stratos.identity.dashboard.ui</artifactId>
                 <version>${stratos.version.221}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
@@ -754,13 +753,13 @@
             <dependency>
                 <groupId>com.h2database.wso2</groupId>
                 <artifactId>h2-database-engine</artifactId>
-                <version>1.2.140.wso2v3</version>
+                <version>${h2database.wso2.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.rampart</groupId>
                 <artifactId>rampart</artifactId>
                 <type>mar</type>
-                <version>1.6.1-wso2v14</version>
+                <version>${rampart.wso2.version.1}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.shindig</groupId>
@@ -872,13 +871,13 @@
             <dependency>
                 <groupId>org.wso2.is</groupId>
                 <artifactId>org.wso2.identity.integration.common.clients</artifactId>
-                <version>${project.version}</version>
+                <version>${product.identity.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.wso2.is</groupId>
                 <artifactId>org.wso2.identity.integration.common.utils</artifactId>
-                <version>${project.version}</version>
+                <version>${product.identity.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
@@ -1009,6 +1008,7 @@
         <xalan.version>2.7.1</xalan.version>
         <xalan.wso2.version>2.7.0.wso2v1</xalan.wso2.version>
         <rampart.wso2.version>1.6.1.wso2v14</rampart.wso2.version>
+        <rampart.wso2.version.1>1.6.1-wso2v14</rampart.wso2.version.1>
         <orbit.version.commons.httpclient>4.2.5.wso2v1</orbit.version.commons.httpclient>
         <commons.httpclient.version>3.1</commons.httpclient.version>
         <httpcore.wso2.version>4.1.3.wso2v1</httpcore.wso2.version>
@@ -1077,6 +1077,13 @@
         <axis2-transports.version>1.1.0-wso2v13</axis2-transports.version>
         <nimbusds.version>2.26.1</nimbusds.version>
         <commons-codec.version>1.4.0.wso2v1</commons-codec.version>
+        <h2database.wso2.version>1.2.140.wso2v3</h2database.wso2.version>
+        <felix.framework.version>1.0.3</felix.framework.version>
+        <osgi.compendium.version>1.0.0</osgi.compendium.version>
+        <equinox.http.servlet.version>2.2.2</equinox.http.servlet.version>
+        <equinox.http.helper.version>1.0.0</equinox.http.helper.version>
+        <equinox.jsp.jasper.version>1.0.1.R33x_v20070816</equinox.jsp.jasper.version>
+        <javax.servlet.jsp.version>2.0.0.v200706191603</javax.servlet.jsp.version>
         <project.scm.id>my-scm-server</project.scm.id>
     </properties>
 
