--- a/pom.xml
+++ b/pom.xml
@@ -1194,16 +1194,16 @@
         <carbon.identity.inbound.auth.openid.version>5.2.0-m1</carbon.identity.inbound.auth.openid.version>
         <carbon.identity.user.workflow.version>5.1.1-m2</carbon.identity.user.workflow.version>
         <carbon.identity.inbound.auth.saml.version>5.1.1-m2</carbon.identity.inbound.auth.saml.version>
-        <carbon.identity.inbound.auth.sts.version>5.1.1-SNAPSHOT</carbon.identity.inbound.auth.sts.version>
+        <carbon.identity.inbound.auth.sts.version>5.1.1-m3</carbon.identity.inbound.auth.sts.version>
         <carbon.identity.outbound.auth.requestpath.basicauth.version>5.1.1-m1
         </carbon.identity.outbound.auth.requestpath.basicauth.version>
         <carbon.identity.local.auth.iwa.version>5.2.0-m1</carbon.identity.local.auth.iwa.version>
-        <carbon.identity.inbound.auth.oauth.version>5.2.0-SNAPSHOT</carbon.identity.inbound.auth.oauth.version>
+        <carbon.identity.inbound.auth.oauth.version>5.2.0-m3</carbon.identity.inbound.auth.oauth.version>
         <carbon.identity.extension.version>5.1.0</carbon.identity.extension.version>
         <carbon.identity.local.auth.basicauth.version>5.2.0-m1</carbon.identity.local.auth.basicauth.version>
         <carbon.identity.outbound.auth.passive.sts.version>5.2.0-m1</carbon.identity.outbound.auth.passive.sts.version>
         <carbon.identity.outbound.auth.samlsso.version>5.1.1-m1</carbon.identity.outbound.auth.samlsso.version>
-        <carbon.identity.carbon.auth.saml2.version>5.1.1-SNAPSHOT</carbon.identity.carbon.auth.saml2.version>
+        <carbon.identity.carbon.auth.saml2.version>5.1.1-m1</carbon.identity.carbon.auth.saml2.version>
         <carbon.identity.tool.samlsso.validator.version>5.1.1-m1</carbon.identity.tool.samlsso.validator.version>
         <carbon.identity.agent.sso.version>5.1.1-m1</carbon.identity.agent.sso.version>
         <product.identity.version>5.3.0-SNAPSHOT</product.identity.version>
@@ -1236,8 +1236,8 @@
         <taglibs.version>1.1.2</taglibs.version>
         <google.collect.wso2.version>1.0.0.wso2v2</google.collect.wso2.version>
         <junit.version>3.8.1</junit.version>
-        <carbon.kernel.version>4.4.6</carbon.kernel.version>
-        <carbon.commons.version>4.5.2</carbon.commons.version>
+        <carbon.kernel.version>4.4.7</carbon.kernel.version>
+        <carbon.commons.version>4.5.4</carbon.commons.version>
         <carbon.dashboards.version>1.0.8</carbon.dashboards.version>
         <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
         <oauth2.client.version>1.0.0</oauth2.client.version>
@@ -1274,7 +1274,7 @@
         <operadriver.version>0.8.1</operadriver.version>
         <selenium.version>2.40.0</selenium.version>
         <testng.version>6.1.1</testng.version>
-        <carbon.deployment.version>4.6.2-SNAPSHOT</carbon.deployment.version>
+        <carbon.deployment.version>4.7.0</carbon.deployment.version>
         <carbon.registry.version>4.5.4</carbon.registry.version>
         <carbon.multitenancy.version>4.5.2</carbon.multitenancy.version>
         <jaggery.extensions.version>1.5.0</jaggery.extensions.version>
@@ -1305,7 +1305,7 @@
         <cipher-tool.version>1.0.0-wso2v3</cipher-tool.version>
         <jacoco.agent.version>0.7.5.201505241946</jacoco.agent.version>
         <project.scm.id>my-scm-server</project.scm.id>
-        <carbon.business-process.version>4.4.8</carbon.business-process.version>
+        <carbon.business-process.version>4.4.9</carbon.business-process.version>
         <carbon.analytics-common.version>5.0.12-beta2</carbon.analytics-common.version>
         <osgi.framework.imp.pkg.version.range>[1.7.0, 2.0.0)</osgi.framework.imp.pkg.version.range>
         <osgi.service.component.imp.pkg.version.range>[1.2.0, 2.0.0)</osgi.service.component.imp.pkg.version.range>
@@ -1326,82 +1326,6 @@
 	by default) and nothing else. We had troubles with other repositories in
 	the past. Therefore configuring additional repositories here should be
 	considered very carefully. -->
-        <repository>
-            <id>wso2.releases1</id>
-            <name>WSO2 internal Repository</name>
-            <url>https://maven.wso2.org/nexus/content/repositories/orgwso2carbonidentity-1075/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-        <repository>
-            <id>wso2.releases2</id>
-            <name>WSO2 internal Repository</name>
-            <url>https://maven.wso2.org/nexus/content/repositories/orgwso2carbonidentity-1077/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-        <repository>
-            <id>wso2.releases3</id>
-            <name>WSO2 internal Repository</name>
-            <url>https://maven.wso2.org/nexus/content/repositories/orgwso2carbonidentity-1078/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-        <repository>
-            <id>wso2.releases4</id>
-            <name>WSO2 internal Repository</name>
-            <url>https://maven.wso2.org/nexus/content/repositories/orgwso2carbonidentity-1079/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-        <repository>
-            <id>wso2.releases5</id>
-            <name>WSO2 internal Repository</name>
-            <url>https://maven.wso2.org/nexus/content/repositories/orgwso2carbonidentity-1080/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-        <repository>
-            <id>wso2.releases6</id>
-            <name>WSO2 internal Repository</name>
-            <url>https://maven.wso2.org/nexus/content/repositories/orgwso2carbonidentity-1083/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-        <repository>
-            <id>wso2.releases7</id>
-            <name>WSO2 internal Repository</name>
-            <url>https://maven.wso2.org/nexus/content/repositories/orgwso2carbonidentity-1084/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-
-
-
-
-
-
 	    <repository>
             <id>wso2-nexus</id>
             <name>WSO2 internal Repository</name>
