--- a/modules/integration/tests-common/pom.xml
+++ b/modules/integration/tests-common/pom.xml
@@ -32,6 +32,7 @@
         <module>admin-clients</module>
         <module>ui-pages</module>
         <module>integration-test-utils</module>
+        <module>extensions</module>
     </modules>
 
 </project>
