--- a/pom.xml
+++ b/pom.xml
@@ -1177,18 +1177,18 @@
 
     <properties>
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.2.2-SNAPSHOT</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.2.1</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
-        <identity.local.auth.basicauth.version>5.1.2-SNAPSHOT</identity.local.auth.basicauth.version>
-        <identity.carbon.auth.saml2.version>5.1.3</identity.carbon.auth.saml2.version>
-        <identity.inbound.auth.saml.version>5.1.2-SNAPSHOT</identity.inbound.auth.saml.version>
+        <identity.local.auth.basicauth.version>5.1.2</identity.local.auth.basicauth.version>
+        <identity.carbon.auth.saml2.version>5.1.4</identity.carbon.auth.saml2.version>
+        <identity.inbound.auth.saml.version>5.1.2</identity.inbound.auth.saml.version>
         <identity.inbound.auth.oauth.version>5.1.3-SNAPSHOT</identity.inbound.auth.oauth.version>
         <identity.inbound.auth.openid.version>5.1.2-SNAPSHOT</identity.inbound.auth.openid.version>
-        <identity.agent.sso.version>5.1.2-SNAPSHOT</identity.agent.sso.version>
-        <identity.inbound.auth.sts.version>5.1.2-SNAPSHOT</identity.inbound.auth.sts.version>
-        <identity.local.auth.fido.version>5.1.2-SNAPSHOT</identity.local.auth.fido.version>
-        <identity.outbound.auth.requestpath.basicauth.version>5.1.2-SNAPSHOT</identity.outbound.auth.requestpath.basicauth.version>
+        <identity.agent.sso.version>5.1.2</identity.agent.sso.version>
+        <identity.inbound.auth.sts.version>5.1.2</identity.inbound.auth.sts.version>
+        <identity.local.auth.fido.version>5.1.2</identity.local.auth.fido.version>
+        <identity.outbound.auth.requestpath.basicauth.version>5.1.2</identity.outbound.auth.requestpath.basicauth.version>
         <identity.carbon.auth.mutual.ssl.version>5.1.2-SNAPSHOT</identity.carbon.auth.mutual.ssl.version>
         <identity.notification.email.version>5.1.2-SNAPSHOT</identity.notification.email.version>
         <identity.notification.json.version>5.1.2-SNAPSHOT</identity.notification.json.version>
@@ -1197,20 +1197,20 @@
         <identity.outbound.provisioning.spml.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.spml.version>
         <identity.user.account.association.version>5.1.2-SNAPSHOT</identity.user.account.association.version>
         <identity.user.workflow.version>5.1.2-SNAPSHOT</identity.user.workflow.version>
-        <identity.user.ws.version>5.1.2-SNAPSHOT</identity.user.ws.version>
+        <identity.user.ws.version>5.1.2</identity.user.ws.version>
         <identity.userstore.ldap.version>5.1.2-SNAPSHOT</identity.userstore.ldap.version>
         <identity.userstore.remote.version>5.1.2-SNAPSHOT</identity.userstore.remote.version>
-        <identity.workflow.impl.bps.version>5.1.2-SNAPSHOT</identity.workflow.impl.bps.version>
-        <identity.local.auth.iwa.version>5.1.2-SNAPSHOT</identity.local.auth.iwa.version>
-        <identity.carbon.auth.iwa.version>5.1.2-SNAPSHOT</identity.carbon.auth.iwa.version>
+        <identity.workflow.impl.bps.version>5.1.2</identity.workflow.impl.bps.version>
+        <identity.local.auth.iwa.version>5.1.2</identity.local.auth.iwa.version>
+        <identity.carbon.auth.iwa.version>5.1.2</identity.carbon.auth.iwa.version>
         <identity.workflow.template.multisteps.version>5.1.2-SNAPSHOT</identity.workflow.template.multisteps.version>
-        <identity.outbound.auth.requestpath.oauth.version>5.1.2-SNAPSHOT</identity.outbound.auth.requestpath.oauth.version>
-        <identity.inbound.provisioning.scim.version>5.1.2-SNAPSHOT</identity.inbound.provisioning.scim.version>
+        <identity.outbound.auth.requestpath.oauth.version>5.1.2</identity.outbound.auth.requestpath.oauth.version>
+        <identity.inbound.provisioning.scim.version>5.1.2</identity.inbound.provisioning.scim.version>
         <identity.outbound.provisioning.scim.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.scim.version>
         <identity.tool.samlsso.validator.version>5.1.2-SNAPSHOT</identity.tool.samlsso.validator.version>
-        <identity.data.publisher.authentication.version>5.1.2-SNAPSHOT</identity.data.publisher.authentication.version>
+        <identity.data.publisher.authentication.version>5.1.2</identity.data.publisher.authentication.version>
         <!--<identity.carbon.auth.thrift.version>5.2.1-SNAPSHOT</identity.carbon.auth.thrift.version>-->
-        <identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>
+        <identity.application.auth.oidc.version>5.1.2</identity.application.auth.oidc.version>
         <!--<identity.agent.entitlement.proxy.version>5.1.1</identity.agent.entitlement.proxy.version>-->
         <!--<identity.carbon.auth.signedjwt.version>5.1.1</identity.carbon.auth.signedjwt.version>-->
         <!--<identity.userstore.cassandra.version>5.1.1</identity.userstore.cassandra.version>-->
