--- a/pom.xml
+++ b/pom.xml
@@ -1214,8 +1214,7 @@
         <identity.agent.sso.version>5.1.1</identity.agent.sso.version>
         <identity.inbound.auth.sts.version>5.1.1</identity.inbound.auth.sts.version>
         <identity.local.auth.fido.version>5.1.1</identity.local.auth.fido.version>
-        <identity.outbound.auth.requestpath.basicauth.version>5.1.2-SNAPSHOT
-        </identity.outbound.auth.requestpath.basicauth.version>
+        <identity.outbound.auth.requestpath.basicauth.version>5.1.2</identity.outbound.auth.requestpath.basicauth.version>
         <identity.carbon.auth.mutual.ssl.version>5.1.1</identity.carbon.auth.mutual.ssl.version>
         <identity.notification.email.version>5.1.1</identity.notification.email.version>
         <identity.notification.json.version>5.1.1</identity.notification.json.version>
@@ -1227,22 +1226,21 @@
         <identity.user.ws.version>5.1.1</identity.user.ws.version>
         <identity.userstore.ldap.version>5.1.1</identity.userstore.ldap.version>
         <identity.userstore.remote.version>5.1.1</identity.userstore.remote.version>
-        <identity.workflow.impl.bps.version>5.1.2-SNAPSHOT</identity.workflow.impl.bps.version>
+        <identity.workflow.impl.bps.version>5.1.2</identity.workflow.impl.bps.version>
         <identity.local.auth.iwa.version>5.2.0-SNAPSHOT</identity.local.auth.iwa.version>
         <identity.carbon.auth.iwa.version>5.1.1</identity.carbon.auth.iwa.version>
         <identity.workflow.template.multisteps.version>5.1.1</identity.workflow.template.multisteps.version>
-        <identity.outbound.auth.requestpath.oauth.version>5.1.2-SNAPSHOT</identity.outbound.auth.requestpath.oauth.version>
+        <identity.outbound.auth.requestpath.oauth.version>5.1.2</identity.outbound.auth.requestpath.oauth.version>
         <identity.inbound.provisioning.scim.version>5.1.1</identity.inbound.provisioning.scim.version>
         <identity.outbound.provisioning.scim.version>5.1.1</identity.outbound.provisioning.scim.version>
         <identity.tool.samlsso.validator.version>5.1.1</identity.tool.samlsso.validator.version>
-        <identity.data.publisher.authentication.version>5.1.2-SNAPSHOT</identity.data.publisher.authentication.version>
+        <identity.data.publisher.authentication.version>5.1.2</identity.data.publisher.authentication.version>
         <identity.data.publisher.oauth.version>1.0.0-SNAPSHOT</identity.data.publisher.oauth.version>
         <!--<identity.carbon.auth.thrift.version>5.5.0-SNAPSHOT</identity.carbon.auth.thrift.version>-->
         <identity.application.auth.oidc.version>5.1.1</identity.application.auth.oidc.version>
         <identity.governance.version>1.0.0-SNAPSHOT</identity.governance.version>
         <org.wso2.carbon.identity.auth.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.auth.version>
-        <identity.event.handler.account.lock.version>
-            1.0.0-SNAPSHOT</identity.event.handler.account.lock.version>
+        <identity.event.handler.account.lock.version>1.0.0-SNAPSHOT</identity.event.handler.account.lock.version>
         <identity.event.handler.notification.version>1.0.0-SNAPSHOT</identity.event.handler.notification.version>
         <!--<identity.agent.entitlement.proxy.version>5.1.1</identity.agent.entitlement.proxy.version>-->
         <!--<identity.carbon.auth.signedjwt.version>5.1.1</identity.carbon.auth.signedjwt.version>-->
