--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>modules/connectors</module>
         <module>modules/authenticators</module>
         <module>modules/social-authenticators</module>
+        <module>modules/provisioning-connectors</module>
         <module>modules/distribution</module>
         <module>modules/styles</module>
         <module>modules/samples</module>
@@ -1218,9 +1219,6 @@
         <identity.carbon.auth.mutual.ssl.version>5.1.2</identity.carbon.auth.mutual.ssl.version>
         <identity.notification.email.version>5.1.1</identity.notification.email.version>
         <identity.notification.json.version>5.1.1</identity.notification.json.version>
-        <identity.outbound.provisioning.google.version>5.1.2</identity.outbound.provisioning.google.version>
-        <identity.outbound.provisioning.salesforce.version>5.1.2</identity.outbound.provisioning.salesforce.version>
-        <identity.outbound.provisioning.spml.version>5.1.2</identity.outbound.provisioning.spml.version>
         <identity.user.account.association.version>5.1.2</identity.user.account.association.version>
         <identity.user.workflow.version>5.1.2</identity.user.workflow.version>
         <identity.user.ws.version>5.1.3</identity.user.ws.version>
@@ -1232,7 +1230,6 @@
         <identity.workflow.template.multisteps.version>5.1.2</identity.workflow.template.multisteps.version>
         <identity.outbound.auth.requestpath.oauth.version>5.1.3</identity.outbound.auth.requestpath.oauth.version>
         <identity.inbound.provisioning.scim.version>5.1.3</identity.inbound.provisioning.scim.version>
-        <identity.outbound.provisioning.scim.version>5.1.2</identity.outbound.provisioning.scim.version>
         <identity.tool.samlsso.validator.version>5.1.2</identity.tool.samlsso.validator.version>
         <identity.data.publisher.authentication.version>5.1.3</identity.data.publisher.authentication.version>
         <identity.data.publisher.oauth.version>0.1.1</identity.data.publisher.oauth.version>
