--- a/carbon-is/components/user-selfcare/org.wso2.carbon.identity.profile.view/pom.xml
+++ b/carbon-is/components/user-selfcare/org.wso2.carbon.identity.profile.view/pom.xml
@@ -32,7 +32,7 @@
     <parent>
         <groupId>org.wso2.carbon.is</groupId>
         <artifactId>product-is</artifactId>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../../../pom.xml</relativePath>
         <version>6.0.0-SNAPSHOT</version>
     </parent>
 
